--- a/sass/components/_hotel-view.scss
+++ b/sass/components/_hotel-view.scss
@@ -22,10 +22,19 @@
     text-transform: uppercase;
     letter-spacing: 1px;
     padding: 1.5rem 3rem;
+
+    @media only screen and (max-width: $phone) {
+      font-size: 1.75rem;
+      padding: 1.5rem 1rem;
+    }
   }
 
   &__stars {
     margin-right: auto;
+
+    @media only screen and (max-width: $phone) {
+      margin-right: none;
+    }
   }
 
   &__icon {
